// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom values 1`] = `
HTMLCollection [
  <div
    class="svelte-4941ld"
    role="toolbar"
  >
    <button
      class="primary iconOnly noColor svelte-6r5o0y"
      title="label.medium-viewport [320 x 480]"
    >
      <i
        class="material-icons svelte-6r5o0y"
      >
        laptop
      </i>
       
       
    </button>
    <!--&lt;Button&gt;-->
    <button
      class="primary iconOnly noColor svelte-6r5o0y"
      title="label.medium-viewport [480 x 800]"
    >
      <i
        class="material-icons svelte-6r5o0y"
      >
        border_outer
      </i>
       
       
    </button>
    <!--&lt;Button&gt;-->
  </div>,
  <div>
    <span />
     
    <div>
      width: 
      100%
    </div>
     
    <div>
      height: 
      100%
    </div>
  </div>,
]
`;

exports[`Default values 1`] = `
HTMLCollection [
  <div
    class="svelte-4941ld"
    role="toolbar"
  >
    <button
      class="primary iconOnly noColor svelte-6r5o0y"
      title="label.small-viewport [320 x 568]"
    >
      <i
        class="material-icons svelte-6r5o0y"
      >
        phone_android
      </i>
       
       
    </button>
    <!--&lt;Button&gt;-->
    <button
      class="primary iconOnly noColor svelte-6r5o0y"
      title="label.medium-viewport [414 x 896]"
    >
      <i
        class="material-icons svelte-6r5o0y"
      >
        stay_current_landscape
      </i>
       
       
    </button>
    <!--&lt;Button&gt;-->
    <button
      class="primary iconOnly noColor svelte-6r5o0y"
      title="label.large-viewport [834 x 1112]"
    >
      <i
        class="material-icons svelte-6r5o0y"
      >
        tablet_android
      </i>
       
       
    </button>
    <!--&lt;Button&gt;-->
  </div>,
  <div>
    <span />
     
    <div>
      width: 
      100%
    </div>
     
    <div>
      height: 
      100%
    </div>
  </div>,
]
`;
